# tcapi

./: Cargo.toml  client.rs  lib.rs  model.rs
api/: mod.rs  teo.rs
client/: Cargo.toml  lib.rs
model/: Cargo.toml  lib.rs  model.rs
model/api/: cert.rs
ureq-example/: Cargo.toml  lib.rs
