[package]
name = "tcapi"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/tcapi"

[lib]
path = "lib.rs"
name = "tcapi"

[dependencies]
# model & api
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.3"
# client
hex = "0.4"
itoa = "1.0"
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
url = "2.5"
http = "1.1"
