[package]
name = "tcapi-client"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/tcapi"

[lib]
path = "lib.rs"
name = "tcapi_client"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
itoa = "1.0"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
url = "2.5"
http = "1.1"
tcapi-model = { path = "../model" }
