[package]
name = "tcapi-client"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/tcapi"

[lib]
path = "lib.rs"
name = "tcapi_client"

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"
hex = "0.4"
itoa = "1.0"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
http = "1.1"
tcapi-model = { path = "../model" }
